# 3821B1PM3_SuchkovVN_labs

Lab 4/: CMakeLists.txt  Отчет по лабораторной 4.docx
Lab 4/src/: main.cpp
Lab 4/vectorlib/: Matrix.h  Vector.h
Lab 5/: CMakeLists.txt
Lab 5/include/: Circle.h  Cube.h  GeomShape.h  Line.h  Point.h  Polygon.h  Simplex.h
Lab1/hdrs/: TPolygons.h  TQuadrangle.h  TRegTriangle.h  TRegulars.h  TRightTriangles.h  TSquare.h  TTriangles.h
Lab1/src/: TPolygons.cpp  TQuadrangle.cpp  TRegTriangle.cpp  TRegulars.cpp  TRightTriangles.cpp  TSquare.cpp  TTriangles.cpp  main.cpp
Lab2/: CMakeLists.txt
Lab2/hdrs/: TComplex.h
Lab2/src/: TComplex.cpp  main.cpp
Lab3/: CMakeLists.txt
Lab3/include/: TString.h
Lab3/src/: TString.cpp  main.cpp
